--- a/sass/_inc/_general.scss
+++ b/sass/_inc/_general.scss
@@ -199,10 +199,21 @@ button:focus {
 
 .navbar-uss {
   background-color: #fff !important;
+  // position: sticky;
+  top: 0;
 
   .navbar-nav {
     padding-top: 14px;
     padding-bottom: 14px;
+    transition: .2s;
+
+    &.nav-min {
+      top: 0!important;
+      // position: sticky!important;
+      transition: .2s;
+      padding-top: 0!important;
+      padding-bottom: 0!important;
+    }
 
     li {
       &.dropdown {
@@ -900,6 +911,8 @@ button:focus {
 // gallery page
 
 .gallery-list {
+  margin: 0;
+  
   &-item {
     margin-bottom: 25px;
     background: $light-gray;
@@ -1061,11 +1074,11 @@ button:focus {
     }
 
     &:nth-child(odd) {
-      margin-left: 0;
+      margin-left: 15px;
     }
 
     &:nth-child(2n) {
-      margin-right: 0;
+      margin-right: 15px;
     }
 
     a {
@@ -1418,6 +1431,8 @@ button:focus {
 // sidebar
 
 .sidebar {
+  position: sticky;
+  top: 50px;
   // position: sticky;
 }
 
@@ -1451,12 +1466,22 @@ button:focus {
 }
 
 .widget {
-  &_nav_menu {
-    .menu {
-      padding: 25px 15px;
-      border: 1px solid $gold;
-      border-radius: 10px;
+  &:last-child {
+    padding-bottom: 0;
+  }
 
+  .widget-title {
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: $uss;
+  }
+
+  &.widget_nav_menu {
+    padding: 25px 20px;
+    background: $l-gray2;
+    border-radius: 3px;
+
+    .menu {
       li {
         padding: 3px 0;
 
@@ -1464,6 +1489,11 @@ button:focus {
           color: $uss;
           text-decoration: none;
           padding: 3px 0;
+          transition: .2s;
+
+          &:hover {
+            padding-left: 3px;
+          }
         }
       }
     }
