--- a/sass/_inc/_helpers.scss
+++ b/sass/_inc/_helpers.scss
@@ -65,11 +65,11 @@ section {
   padding-bottom: 25px;
 }
 
-// ul {
-//   list-style: none;
-//   margin: 0;
-//   padding: 0;
-// }
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
@@ -197,9 +197,13 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   &-cont {
-    padding-top: 10px;
+    // padding-top: 10px;
     font-size: 14px;
     color: $uss;
+    background: #f0f0f0;
+    padding: 15px;
+    margin-top: 20px;
+    border-radius: 3px;
 
     &--link {
       text-decoration: underline;
