--- a/sass/_inc/_master.scss
+++ b/sass/_inc/_master.scss
@@ -43,3 +43,43 @@
 ul {
   list-style: none;
 }
+
+// Contact Form
+
+.wpcf7 {
+  form {
+    width: 100%!important;
+  }
+
+  .form-group {
+
+    #subjid {
+      border: none;
+      padding: 0;
+      font-size: 18px!important;
+      color: $uss!important;
+      font-weight: 300;
+
+    }
+
+    input {
+      width: 100%;
+      height: 46px;
+      padding: 13px 20px;
+      border: 1px solid #B0976D;
+      border-radius: 2px;
+      font-size: 14px!important;
+
+      &:active, &:focus {
+        outline: none;
+        box-shadow: none;
+      }
+
+      &::placeholder {
+        font-size: 14px;
+        color: $d-gray2;
+        font-weight: 500;
+      }
+    }
+  }
+}
