--- a/sass/_inc/_helpers.scss
+++ b/sass/_inc/_helpers.scss
@@ -183,6 +183,16 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
 }
 
+.owl-item {
+  .item {
+    height: calc(100% - 50px);
+
+    .price-services-item {
+      height: 100%;
+    }
+  }
+}
+
 // Breadcrumbs
 
 .breadcrumbs {
@@ -247,7 +257,7 @@ h1, h2, h3, h4, h5, h6 {
       background: $uss;
       align-items: center;
       justify-content: center;
-      padding: 15px 35px;
+      padding: 15px 40px;
       text-align: center;
 
       .close {
