--- a/sass/_inc/_general.scss
+++ b/sass/_inc/_general.scss
@@ -1535,31 +1535,29 @@ button:focus {
     padding-bottom: 0;
   }
 
-  &_nav_menu {
-    .menu-main-container {
-      padding: 25px 20px;
-      background: $l-gray2;
-      border-radius: 3px;
+  .widget-title {
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: $uss;
+  }
 
-      .widget-title {
-        font-size: 24px;
-        margin-bottom: 10px;
-        color: $uss;
-      }
+  &.widget_nav_menu {
+    padding: 25px 20px;
+    background: $l-gray2;
+    border-radius: 3px;
 
-      .menu {
-        li {
+    .menu {
+      li {
+        padding: 3px 0;
+
+        a {
+          color: $uss;
+          text-decoration: none;
           padding: 3px 0;
+          transition: .2s;
 
-          a {
-            color: $uss;
-            text-decoration: none;
-            padding: 3px 0;
-            transition: .2s;
-
-            &:hover {
-              padding-left: 3px;
-            }
+          &:hover {
+            padding-left: 3px;
           }
         }
       }
