--- a/sass/_inc/_mixins.scss
+++ b/sass/_inc/_mixins.scss
@@ -140,6 +140,12 @@
     }
   }
 
+  // .nav-min {
+  //   .navbar-nav {
+  //     padding: 0!important;
+  //   }
+  // }
+
 }
 
 @media (max-width: 767.98px) {
