--- a/sass/_inc/_general.scss
+++ b/sass/_inc/_general.scss
@@ -703,6 +703,8 @@ button:focus {
 // Gallery
 
 .home-gallery {
+  padding-bottom: 0;
+
   &--footer {
     text-align: center;
     margin-top: 25px;
@@ -805,6 +807,12 @@ button:focus {
 }
 
 // Clients
+
+.home-clients {
+  .title-main--title {
+    padding-top: 5px!important;
+  }
+}
 
 .clients-box {
   display: flex;
@@ -1267,7 +1275,7 @@ button:focus {
 
 .about {
   &-title {
-    text-align: center;
+    text-align: left;
     margin-top: 50px;
   }
 
@@ -1497,7 +1505,7 @@ button:focus {
 
 .sidebar {
   position: sticky;
-  top: 75px;
+  top: 100px;
   // position: sticky;
 }
 
