--- a/sass/_inc/_mixins.scss
+++ b/sass/_inc/_mixins.scss
@@ -161,6 +161,10 @@
       color: #fff;
       font-weight: 500;
 
+      &:hover {
+        color: #fff;
+      }
+
       img {
         width: 50px;
       }
