--- a/sass/_inc/_general.scss
+++ b/sass/_inc/_general.scss
@@ -245,8 +245,8 @@ button:focus {
 
 .navbar-uss {
   background-color: #fff !important;
-  // position: sticky;
-  // top: 0;
+  position: sticky;
+  top: 0;
 
   .navbar-nav {
     padding-top: 14px;
