--- a/sass/_inc/_general.scss
+++ b/sass/_inc/_general.scss
@@ -516,6 +516,10 @@ button:focus {
   &-item {
     width: 290px;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     margin: 25px;
     padding: 20px 20px;
     background: #FEFEFE;
@@ -620,6 +624,11 @@ button:focus {
 
     &__footer {
       padding: 5px 0 0;
+      // position: absolute;
+      // margin: 0 auto;
+      // left: 0;
+      // right: 0;
+      // bottom: 10px;
     }
 
     &__price {
