--- a/sass/_inc/_general.scss
+++ b/sass/_inc/_general.scss
@@ -383,7 +383,7 @@ button:focus {
 
 .banner {
   margin-top: 25px;
-  margin-bottom: -25px;
+  // margin-bottom: -25px;
 
   &-img {
     width: 100%;
