--- a/sass/_inc/_mixins.scss
+++ b/sass/_inc/_mixins.scss
@@ -234,6 +234,7 @@
 
   .services-h {
     padding-top: 0;
+    padding-bottom: 0!important;
     display: flex;
     flex-direction: column-reverse;
   }
