--- a/sass/_inc/_general.scss
+++ b/sass/_inc/_general.scss
@@ -387,12 +387,13 @@ button:focus {
 
   &-img {
     width: 100%;
-    height: 300px;
+    height: 250px;
 
     &--img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      border-radius: 5px;
     }
   }
 }
@@ -483,6 +484,22 @@ button:focus {
       &--btn {
 
       }
+    }
+  }
+}
+
+.banner-services {
+  margin-top: 25px;
+
+  &-img {
+    width: 100%;
+    height: 250px;
+
+    &--img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 5px;
     }
   }
 }
