--- a/sass/_inc/_mixins.scss
+++ b/sass/_inc/_mixins.scss
@@ -188,6 +188,16 @@
     }
   }
 
+  .banner-services {
+    &-img {
+      &--img {
+        &-mob {
+          display: none;
+        }
+      }
+    }
+  }
+
   // .nav-min {
   //   .navbar-nav {
   //     padding: 0!important;
@@ -492,7 +502,7 @@
 
   .banner {
     > .container {
-      padding: 0;
+      // padding: 0;
     }
   }
 
@@ -525,9 +535,19 @@
     p {
       margin: 0;
     }
-    
+
     .btn {
       width: 100%;
+    }
+  }
+
+  .banner-services {
+    &-img {
+      &--img {
+        &-desc {
+          display: none;
+        }
+      }
     }
   }
 
