Delete sidebar mob services

--- a/sass/_inc/_mixins.scss
+++ b/sass/_inc/_mixins.scss
@@ -551,6 +551,10 @@
     }
   }
 
+  .page-aboutus-sidebar {
+    display: none;
+  }
+
 }
 
 // Экстрамалые девайсы («портретные телефоны», < 576px)
