Update paddings & page about

--- a/sass/_inc/_general.scss
+++ b/sass/_inc/_general.scss
@@ -1453,6 +1453,7 @@ button:focus {
 
   &-values {
     &__list {
+      margin-top: 25px!important;
       background: $l-gray2;
       padding: 15px;
       border-radius: 10px;
