--- a/sass/_inc/_mixins.scss
+++ b/sass/_inc/_mixins.scss
@@ -183,7 +183,7 @@
   .price-services {
     &-item {
       &:hover {
-        margin: 0 25px 50px 25px;
+        margin: 0 25px 50px 0;
       }
     }
   }
@@ -476,7 +476,7 @@
   .home-services {
     .title-main {
       &--title {
-        padding: 15px;
+        padding: 15px!important;
         font-size: 20px;
       }
     }
@@ -533,7 +533,7 @@
 
   .contacts-form {
     margin-top: 25px;
-    
+
     p {
       margin: 0;
     }
